--- a/mykart/shop/templates/shop/index.html
+++ b/mykart/shop/templates/shop/index.html
@@ -21,12 +21,18 @@ background-color: blue;
 }
 
 body .carousel-indicators{
-bottom: 0;
+
 }
 
 body .carousel-control-prev-icon,
 body .carousel-control-next-icon{
 background-color: blue;
+}
+
+.carousel-control-prev,
+.carousel-control-next{
+top: auto;
+bottom: auto;
 }
 body .no-padding{
 padding-left: 0,
@@ -37,15 +43,18 @@ padding-right: 0;
 {% block body %}
 {% load static %}
 <div class="container">
-  <div id="demo" class="carousel slide my-3" data-ride="carousel">
+
+  <!--Slideshow starts here -->
+  {% for product,range,nSlides in allProds%}
+  <h1>{{product.0.category}}</h1>
+  <div id="demo{{forloop.counter}}" class="carousel slide my-3" data-ride="carousel">
     <ul class="carousel-indicators">
-      <li data-target="#demo" data-slide-to="{{i}}" class="active"></li>
+      <li data-target="#demo{{forloop.counter}}" data-slide-to="{{i}}" class="active"></li>
       {% for i in range  %}
-      <li data-target="#demo" data-slide-to="1"></li>
+      <li data-target="#demo{{forloop.parentloop.counter}}" data-slide-to="1"></li>
       {% endfor %}
     </ul>
 
-    <!--Slideshow starts here -->
     <div class="container carousel-inner no-padding">
 
       <div class="carousel-item active">
@@ -83,12 +92,13 @@ padding-right: 0;
   </div>
 
     <!-- left and right controls for the slide -->
-    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <a class="carousel-control-prev" href="#demo{{forloop.counter}}" data-slide="prev">
       <span class="carousel-control-prev-icon"></span>
     </a>
-    <a class="carousel-control-next" href="#demo" data-slide="next">
+    <a class="carousel-control-next" href="#demo{{forloop.counter}}" data-slide="next">
       <span class="carousel-control-next-icon"></span>
     </a>
+    {% endfor %}
+  </div>
     {% endblock %}
 
-</div>
