--- a/mykart/shop/templates/shop/index.html
+++ b/mykart/shop/templates/shop/index.html
@@ -46,7 +46,7 @@ padding-right: 0;
 
   <!--Slideshow starts here -->
   {% for product,range,nSlides in allProds%}
-  <h1>{{product.0.category}}</h1>
+  <h1 class="my-4">{{product.0.category}}</h1>
   <div id="demo{{forloop.counter}}" class="carousel slide my-3" data-ride="carousel">
     <ul class="carousel-indicators">
       <li data-target="#demo{{forloop.counter}}" data-slide-to="{{i}}" class="active"></li>
