--- a/mykart/shop/templates/shop/index.html
+++ b/mykart/shop/templates/shop/index.html
@@ -64,7 +64,7 @@ padding-right: 0;
             <div class="card-body">
               <h5 class="card-title">{{product.0.product_name}}</h5>
               <p class="card-text">{{product.0.desc}}</p>
-              <a href="#" class="btn btn-primary">Add to cart</a>
+              <button id="pr{{product.0.id}}" class="btn btn-primary cart">Add to cart</button>
             </div>
           </div>
         </div>
@@ -77,7 +77,7 @@ padding-right: 0;
             <div class="card-body">
               <h5 class="card-title">{{i.product_name}}</h5>
               <p class="card-text">{{i.desc}}</p>
-              <a href="#" class="btn btn-primary">Add to cart</a>
+              <button id="pr{{i.id}}" class="btn btn-primary cart">Add to cart</button>
             </div>
           </div>
         </div>
@@ -100,5 +100,26 @@ padding-right: 0;
     </a>
     {% endfor %}
   </div>
+    {% endblock %}
+    {% block js %} 
+      <script>
+        if(localStorage.getItem('cart')==null){
+          var cart = {};
+        }
+        else{
+          cart = JSON.parse(localStorage.getItem('cart'));
+        }
+
+        $('.cart').click(function(){
+          var idStr = this.id.toString();
+          if(idStr!=undefined){
+            cart[idStr] = cart[idStr] +1;
+          }
+          else{
+            cart[idStr]=1;
+          }
+          localStorage.setItem('cart', JSON.stringify(cart));
+        });
+      </script>
     {% endblock %}
 
