initialise screens in views.py

--- a/mykart/shop/templates/shop/about.html
+++ b/mykart/shop/templates/shop/about.html
@@ -1,6 +1,6 @@
 {% extends 'shop/basic.html' %}
 
-{% block title%} Title of About{% endblock %}
+{% block title%}About Us{% endblock %}
 
 
-{% block body %} This is a body{% endblock %}
+{% block body %} This is out about page{% endblock %}
