--- a/mykart/shop/templates/shop/about.html
+++ b/mykart/shop/templates/shop/about.html
@@ -3,4 +3,42 @@
 {% block title%}About Us{% endblock %}
 
 
-{% block body %} This is out about page{% endblock %}
+{% block body %} 
+<main role="main">
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <div class="container">
+        <h1 class="display-3">E=commerce website</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores soluta hic quo dolor, alias necessitatibus voluptatum quia. Omnis error ipsa deleniti perferendis nesciunt ex facere facilis magnam unde, nemo quisquam consequuntur dignissimos impedit itaque voluptatem, nisi accusamus fugiat ea laboriosam amet quis totam. Iusto consequuntur nobis earum ratione possimus. Sequi eos eligendi id totam cupiditate possimus, voluptatem labore error sed nobis, enim ab facilis, sunt ut? Debitis quaerat voluptatibus, nihil, qui provident nobis dicta perspiciatis dolorum nostrum excepturi accusantium ullam porro accusamus ut suscipit, similique non optio. Iste repellat, ratione voluptates in qui vitae, doloremque iure aspernatur dolor reprehenderit perspiciatis nostrum eum, officia laudantium ducimus placeat inventore et dolore quae possimus! Porro, reiciendis accusamus inventore facilis veniam nostrum, officiis expedita impedit perferendis recusandae eaque enim maiores ex ad laudantium dolorem fugiat id a aspernatur fugit. Sunt quam doloribus laudantium fugiat porro maiores animi suscipit, natus iusto eum deleniti, consequuntur esse iste laborum. Perferendis eligendi, repellendus atque aliquid officiis assumenda enim neque modi ab, impedit asperiores optio dolores, amet eveniet iste incidunt? Sunt debitis et voluptates, sequi ipsum aut maiores rem quae quaerat minima, porro quis hic odit nihil. Numquam temporibus laborum soluta tempore aspernatur nesciunt velit ipsam? Culpa dignissimos obcaecati officia neque maiores voluptate iste illo consequatur, voluptates minima, similique sit quidem modi nihil. Mollitia libero rem unde ex, consectetur repellat enim blanditiis nulla odio modi natus pariatur ullam repudiandae eos, quae, quidem voluptatem ipsam deleniti nihil aliquid temporibus quaerat. Dicta perspiciatis, ullam accusamus est error voluptas suscipit eos modi possimus necessitatibus eum cumque, beatae dolorem placeat repudiandae totam animi nulla? Voluptatibus porro sapiente officiis aperiam rem. Ullam, itaque!</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
+      </div>
+    </div>
+  
+    <div class="container">
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-md-4">
+          <h2>Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Heading</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+        </div>
+      </div>
+  
+      <hr>
+  
+    </div> <!-- /container -->
+  
+  </main>
+
+{% endblock %}
