--- a/mykart/shop/templates/shop/prodview.html
+++ b/mykart/shop/templates/shop/prodview.html
@@ -1,6 +1,53 @@
 {% extends 'shop/basic.html' %}
 
-{% block title%}Product{% endblock %}
+{% block title%}  {{product.product_name}} {% endblock %}
+
+{% block body %} 
+<div class="container my-4">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="row">
+                <img src="/media/{{product.image}}" width="233px" height="385px" alt="">
+            </div>
+            <div class="row">
+                <button class="btn-primary mx-3 ">Buy Now</button>
+                <button class="btn-primary">Add to Cart</button>
+            </div>
+        </div>
+    
+        <div class="col-md-8">
+            <h5>{{product.product_name}}</h5>
+            <h5><b>Rs. {{product.price}}</b></h5>
+            <p>{{product.desc}}</p>
+        </div>
+    </div>
+    
+    
+</div>
 
 
-{% block body %} This is out product page{% endblock %}
+{% endblock %}
+{% block js %} 
+      <script>
+        if(localStorage.getItem('cart')==null){
+          var cart = {};
+        }
+        else{
+          cart = JSON.parse(localStorage.getItem('cart'));
+          document.getElementById('cart').innerHTML = Object.keys(cart).length;
+        }
+
+        $('.cart').click(function(){
+          var idStr = this.id.toString();
+          if(idStr!=undefined){
+            cart[idStr] = cart[idStr] +1;
+          }
+          else{
+            cart[idStr]=1;
+          }
+          localStorage.setItem('cart', JSON.stringify(cart));
+        });
+        $('#popcart').popover();
+        document.getElementById("popcart").setAttribute('data-content', "<h5>Cart</h5>");
+      </script>
+    {% endblock %}
